# code-gen

./: .gitignore  DEVELOPMENT.md  LICENSE  MAIN_INTERFACE_SUMMARY.md  Makefile  README.md  UV_INTEGRATION.md  config.toml  pyproject.toml
.kiro/specs/ofdm-chirp-generator/: design.md  requirements.md  tasks.md
examples/: basic_usage.py  chirp_modulator_demo.py  config_demo.py  error_handling_demo.py  gpu_backend_demo.py  main_interface_demo.py  ofdm_generator_demo.py  ofdm_structure_demo.py  orthogonal_signal_set_demo.py  orthogonality_demo.py  performance_benchmarks_demo.py  performance_optimization_demo.py  phase_optimization_demo.py  quick_start_demo.py  signal_export_demo.py  signal_separation_demo.py
ofdm_chirp_generator/: __init__.py  chirp_modulator.py  config_manager.py  correlation_analyzer.py  error_handling.py  gpu_backend.py  main.py  models.py  ofdm_generator.py  orthogonal_signal_generator.py  orthogonality_tester.py  performance_optimizer.py  phase_optimizer.py  real_time_validator.py  signal_export.py  signal_separator.py  subcarrier_manager.py  validation.py
scripts/: dev.py  run_performance_benchmarks.py  setup.py
tests/: __init__.py  test_chirp_modulator.py  test_config_manager.py  test_correlation_analyzer.py  test_error_handling.py  test_gpu_backend.py  test_main_interface.py  test_models.py  test_ofdm_generator.py  test_orthogonal_signal_generator.py  test_orthogonality_tester.py  test_performance_benchmarks.py  test_performance_optimizer.py  test_phase_optimizer.py  test_signal_export.py  test_signal_separator.py  test_subcarrier_manager.py  test_validation.py
